add: footer component

--- a/front/Ycata/src/app/footer/footer.component.html
+++ b/front/Ycata/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center min-h-24 bg-white/50 text-secondary">
+<footer class="flex flex-col items-center min-h-24 bg-white/50 text-secondary">
     <div>
         <a [routerLink]="[]" fragment="" class="font-semibold text-2xl mr-10 ml-10">YCata</a>
     </div>
@@ -8,4 +8,6 @@
         <a [routerLink]="[]" fragment="map" class="mr-5">Carte</a>
         <a [routerLink]="[]" fragment="activities">Activités</a>
     </div>
-</nav>
+    <p>Si vous avez des questions, ne nous appelez pas au +33000000000</p>
+    <p>© 2025 YCata. Tous droits réservés. </p>
+</footer>
