--- a/front/Ycata/src/app/app.component.html
+++ b/front/Ycata/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--Affichage de la map-->
 <app-navbar></app-navbar>
+<app-introduction></app-introduction>
 <app-map></app-map>
 <app-footer></app-footer>
