--- a/front/Ycata/src/app/app.component.html
+++ b/front/Ycata/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--Affichage de la map-->
 <app-navbar></app-navbar>
+<app-alert></app-alert>
 <app-introduction></app-introduction>
 <app-map></app-map>
 <app-footer></app-footer>
