--- a/front/Ycata/src/app/alert/alert.component.html
+++ b/front/Ycata/src/app/alert/alert.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col text-center text-white bg-[#A4031F]">
+<div id="alert" class="flex flex-col text-center text-white bg-[#A4031F]">
     <div class="mt-5 mb-5">
         <p>ALERTE: Séisme à proximité</p>
         <p>Lieu: Zone 1</p>
