--- a/front/Ycata/src/app/app.component.html
+++ b/front/Ycata/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--Affichage de la map-->
 <app-navbar></app-navbar>
+<app-zone *ngFor="let zone of zones" [zone]="zone"></app-zone>
 <app-map></app-map>
 <div class="h-96 bg-red-500"></div>
