add: activities component

--- a/front/Ycata/src/app/app.component.html
+++ b/front/Ycata/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-alert></app-alert>
 <app-introduction></app-introduction>
 <app-map></app-map>
+<app-activities></app-activities>
 <app-footer></app-footer>
