--- a/front/Ycata/src/app/app.component.html
+++ b/front/Ycata/src/app/app.component.html
@@ -3,5 +3,5 @@
 <app-alert></app-alert>
 <app-introduction></app-introduction>
 <app-zone *ngFor="let zone of zones" [zone]="zone"></app-zone>
-<app-map></app-map>
+<app-map id="map"></app-map>
 <app-footer></app-footer>
