--- a/front/Ycata/src/app/introduction/introduction.component.html
+++ b/front/Ycata/src/app/introduction/introduction.component.html
@@ -1,5 +1,5 @@
-<div class="mt-10 mb-10">
-    <p class="text-center">Vous souhaitez découvrir les actualités de Toulouse ? Vous vous préparez aux dangers qui survolent la ville ?</p>
+<div class="introduction">
+    <p>Vous souhaitez découvrir les actualités de Toulouse ? Vous vous préparez aux dangers qui survolent la ville ?</p>
     <br>
-    <p class="text-center"><span class="font-bold">Ycata</span> est fait pour vous guider, vous proposez les meilleurs activités à faire pour palier aux catastrophes qui nous entourent.</p>
+    <p><span>Ycata</span> est fait pour vous guider, vous proposez les meilleurs activités à faire pour palier aux catastrophes qui nous entourent.</p>
 </div>
