--- a/front/Ycata/src/app/footer/footer.component.html
+++ b/front/Ycata/src/app/footer/footer.component.html
@@ -1,13 +1,13 @@
-<footer class="flex flex-col items-center min-h-24 bg-white/90 text-secondary">
+<footer>
     <div>
-        <a [routerLink]="[]" fragment="" class="font-semibold text-2xl mr-10 ml-10">YCata</a>
+        <a [routerLink]="[]" fragment="">YCata</a>
     </div>
     <div>
-        <a [routerLink]="[]" fragment="alert" class="mr-5">Alerte</a>
-        <a [routerLink]="[]" fragment="area" class="mr-5">Zone</a>
-        <a [routerLink]="[]" fragment="map" class="mr-5">Carte</a>
+        <a [routerLink]="[]" fragment="alert">Alerte</a>
+        <a [routerLink]="[]" fragment="area">Zone</a>
+        <a [routerLink]="[]" fragment="map">Carte</a>
         <a [routerLink]="[]" fragment="activities">Activités</a>
     </div>
     <p>Si vous avez des questions, ne nous appelez pas au +33000000000</p>
-    <p>© 2025 YCata. Tous droits réservés. </p>
+    <p>© 2025 YCata. Tous droits réservés.</p>
 </footer>
