--- a/front/Ycata/src/app/alert/alert.component.html
+++ b/front/Ycata/src/app/alert/alert.component.html
@@ -3,6 +3,7 @@
         <p>ALERTE: {{latestEvent.name}}</p>
         <p>Lieu: Zone {{latestEvent.zone_id}}</p>
         <p>Magnitude: {{latestEvent.magnitude}}</p>
+        <p>Niveau de l'eau: {{latestEvent.level}} cm</p>
         <p>Sévérité: {{latestEvent.severity}}</p>
         <p>Date: {{latestEvent.start_time | date:'short'}}</p>
     </div>
