--- a/front/Ycata/src/app/app.component.html
+++ b/front/Ycata/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-introduction></app-introduction>
 <app-zone *ngFor="let zone of zones" [zone]="zone"></app-zone>
 <app-map></app-map>
+<app-part></app-part>
 <app-footer></app-footer>
